--- a/CSS/sheet.css
+++ b/CSS/sheet.css
@@ -7,7 +7,14 @@ div#main{
 	color: gray;
 }
 div#center{
-	text-align: auto;
+	position: absolute;
+	width:700px;
+	height:500px;
+	left:45%
+	;top:50%; 
+	margin-left:-200px;
+	margin-top:-100px;
+	border:0px 
 }
 
 div#image{
