--- a/CSS/sheet.css
+++ b/CSS/sheet.css
@@ -14,8 +14,8 @@ div#void{
 	position: absolute;
 	width:700px;
 	height:500px;
-	left:45%
-	;top:50%; 
+	left:45%;
+	top:50%; 
 	margin-left:-200px;
 	margin-top:-100px;
 	border:0px 
